# sticks3-buddy

./: .gitignore  PROTOCOL_V2.md  README.md  REFERENCE.md  platformio.ini
.github/workflows/: ci.yml  pages.yml  release.yml
boards/: m5stick-s3.json  m5stickc-plus2.json
docs/: ARCHITECTURE.md  CONNECTIVITY.md  CREDITS.md  PORT_SPEC.md  TDECK_FEASIBILITY.md  deferred-theoretical-findings.md
host/: README.md  pyproject.toml
host/src/buddy_bridge/: __init__.py  __main__.py  audit.py  cards.py  cli.py  config.py  daemon.py  decision.py  federation.py  link_tcp.py  matchers.py  protocol.py  registry.py  relay.py  service.py  usage.py  wifi_import.py
host/src/buddy_bridge/adapters/: claude_cli.py  claude_jsonl.py  codex.py  codex_sessions.py  github_cards.py  update_cards.py  weather_cards.py
host/src/buddy_bridge/ble/: link.py  winrt_radio.py
host/src/buddy_bridge/hooks/: claude_hook.py  codex_hook.py
host/src/buddy_bridge/install/: _merge.py  claude_settings.py  codex_hooks.py
host/src/buddy_bridge/ipc/: client.py  endpoint.py  server.py
host/src/buddy_bridge/notify/: __init__.py  telegram.py  telegram_bot.py
host/tests/: conftest.py  test_ask_origination.py  test_cards.py  test_claude_hook.py  test_claude_settings.py  test_codex_hook.py  test_codex_install.py  test_codex_sessions.py  test_config.py  test_decision.py  test_device_link.py  test_endpoint.py  test_federation.py  test_federation_daemon.py  test_gate_daemon.py  test_ipc.py  test_jsonl_tailer.py  test_matchers.py  test_modes.py  test_protocol.py  test_protocol_v2.py  test_registry.py  test_relay.py  test_relay_v2.py  test_service.py  test_telegram_ask_hook.py  test_telegram_bot.py  test_telegram_cli.py  test_telegram_config.py  test_telegram_daemon.py  test_telegram_notify.py  test_update_cards.py  test_usage.py  test_wifi.py  test_wifi_import.py  test_yield.py
partitions/: no_ota_4mb.csv  sticks3_8mb_ota.csv
src/: ble_bridge.cpp  ble_bridge.h  buddy.h  character.cpp  character.h  compat.h  config.h  data.h  host_registry.cpp  host_registry.h  main.cpp  proto_parse.h  session_table.h  stats.h  wifi_store.cpp  wifi_store.h  xfer.h
src/audio/: motifs.h  tune_player.h  tune_types.h  tunes.h  tunes_builtin.h
src/hal/: hal.h  hal_common.cpp  hal_stickc_plus.cpp  hal_stickc_plus2.cpp  hal_sticks3.cpp
src/ota/: ota.cpp  (+1 more)
tools/: merge_bin.py  test_protocol.py
web/: index.html  manifest-template.json
(+33 files in other folders)
